Changed email to ellisodowd.dev. Fixed mobile project yolkify ss from going off screen

--- a/src/Components/Links/styles.css
+++ b/src/Components/Links/styles.css
@@ -33,13 +33,16 @@
   /* margin-left: 30px; */
   /* margin-right: 30px; */
 }
+.gmail-card {
+  width: 240px;
+}
 .link-text {
   color: white;
   font-size: 14pt;
   text-decoration: underline;
 }
 .email-text {
-  font-size: 10pt;
+  font-size: 12pt;
 }
 .top-color {
   width: 100%;
