--- a/src/Components/ProjectsCollapsable/styles.css
+++ b/src/Components/ProjectsCollapsable/styles.css
@@ -387,6 +387,7 @@
     margin-left: 10px;
     /* margin-right: 10px; */
     grid-template-rows: auto auto 300px auto;
+    grid-template-columns: 70px 70px 2fr 2fr 10px;
     margin-bottom: 0px;
   }
   .yolkify-web-grid-open {
@@ -457,13 +458,13 @@
     grid-area: 3/ 1/ 4/ 3;
     height: 100%;
     max-height: 400px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
   #yolkify-profile {
-    grid-area: 3/ 3/ 4/ 5;
+    grid-area: 3/ 4/ 4/ 5;
     height: 100%;
     max-height: 400px;
-    margin-left: -20px;
+    margin-left: -25%;
   }
   .technology-logo {
     height: 65px;
